update logback; recompile tweetnacl, rework crc32c